# hailports

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
backoffice/: __init__.py  autopilot.py  cli.py  controller.py  ingest.py  ledger.py  org.py  reports.py  simulate.py  test_backoffice.py
config/: branding.toml  gateway.yaml  settings.toml  users.template.toml
core/: __init__.py  activity_rundown.py  adaptive_learning.py  admin_action_agent.py  aeo_readiness_probe.py  agent_relay.py  ai_budget.py  alert.py  alert_bus.py  alert_gateway.py  all_brain_rag.py  alpaca_bot.py  anticipation_engine.py  apple_mail_index.py  approval_ledger.py  auth_maintenance.py  auto_patcher.py  automation_usage.py  autonomous_outbound.py  autonomous_send.py  autonomy_ledger.py  background_llm_coordinator.py  backtester.py  basic_questions.py  bee.py  blast_radius.py  bottleneck_diagnoser.py  brand_dedup.py  brand_email.py  brand_registry.py  browser_pool.py  burn_rate_guard.py  capability_crystallization.py  chat_file_paths.py  chat_intelligence.py  chat_registry.py  chrome_launch.py  chronic_escalator.py  claude_code_spend.py  claude_code_tracker.py  (+235 more)
openclaw/: README.md  config.example.json5  index.ts  openclaw.plugin.json  package.json
self-healing/: README.md  eternal_guardian.py  jit_healer.py
session-bridge/: README.md  bridge.py  config.example.toml
sfdc-toolkit/: METHODOLOGY.md  README.md
social-governor/: README.md  social_governor.py
tools/: agent_bridge_worker.py  agent_council.py  agent_eval.py  ai_visibility_index.py  anthropic_proxy.py  apple_calendar.py  apple_contacts.py  apple_mail.py  apple_notes.py  apple_reminders.py  apple_shortcuts.py  attachment_extract.py  attachment_watcher.py  autonomy_drill.py  base.py  bofu_seo_factory.py  bounded_exec.py  brand_clone_guard.py  break_glass_imsg.py  build_hailports_home.py  build_hailports_products.py  build_launch_assets.py  capability_canary.py  case_study_public_guard.py  case_study_stats_publisher.py  case_study_x_rot_guard.py  cdp_foreground_warden.py  cdp_minimize.py  chain_domain_guard.py  changelog_git_hook.sh  chat_context_digest.py  check_no_headful_steal.py  (+172 more)
tools/wells/: README.md  RULES.md  about.html  debug_api.py  output_sample.txt  pyproject.toml
tools/wells/.github/workflows/: build-index-wheels.yml  ci.yml  release-index.yml
tools/wells/.wells/: rules.yaml
tools/wells/src/coding_harness/: AGENT.md  __init__.py  __main__.py  chat.py  checkers.py  cli.py  compress.py  config.py  context.py  control.py  executor.py  finisher.py  gitops.py  graph.py  index_tools.py  index_watcher.py  logger.py  logo.py  main.py  mcp_client.py  mcp_server.py  memory.py  pricing.py  principles.py  providers.py  repomap.py  rules.py  runtime.py  safety.py  settings.py  setup.py  state.py  subagents.py  summarize.py  tools.py  tui.py
tools/wells/src/coding_harness/agents/: architect.py  coder.py  planner.py  reviewer.py  tester.py
tools/wells/tests/: test_chat.py  test_executor.py  test_layer3.py  test_mcp_server.py  test_orchestrator.py  test_platform.py  test_principles.py  test_providers_and_settings.py  test_quality.py  test_rules.py  test_tools.py
tools/wells/wells-index/: Cargo.toml  README.md  pyproject.toml
tools/wells/wells-index/python/wells_index/: __init__.py
(+38 files in other folders)
