[package]
name = "wells-index"
version = "0.1.1"
edition = "2021"
authors = ["Wells Contributors"]
description = "Fast structural repository indexer for wells-coding-harness"
repository = "https://github.com/corbybender/Wells-Coding-Harness"
license = "MIT OR Apache-2.0"

[lib]
name = "wells_index"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
tree-sitter = "0.24"
rayon = "1.10"
blake3 = "1.5"
lz4_flex = "0.11"
walkdir = "2.5"
anyhow = "1.0"
regex = "1.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[build-dependencies]
cc = "1.1"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
